force-app/main/default/objects/vlocity_cmt__OmniScript__c/fields/vlocity_cmt__DataRaptorBundleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DataRaptorBundleName__c</fullName>
    <formula>vlocity_cmt__DataRaptorBundleId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DataRaptor Bundle Name</label>
    <type>Text</type>
</CustomField>